@@ -37,8 +37,9 @@
 #define MAXL 200
 
 enum e_footprint {
-    PART_SHAPE_UNKNOWN = 0, /// drawn as circle with line
-    PART_SHAPE_RECTANGLE = 1 /// rectangle with one side marked
+    PART_SHAPE_UNKNOWN = 0, // drawn as circle with line
+    PART_SHAPE_RECTANGLE = 1, // rectangle with one side marked
+    PART_SHAPE_STD = 2 //rectangle with one corner marked
 };
 
 typedef struct pnp_state {
