@@ -1,3 +1,11 @@
+2004-09-04 Juergen Haas <juergenhaas@gmx.net>
+
+	*fixed graphical representation of parts
+	*added gerb_transf_rotate
+	*added gerb_transf_shift  
+	*fixed segfault when searching in comments
+	*designator is also shown checked by default
+
 2004-08-28 Juergen Haas <juergenhaas@gmx.net>
 
 	*fixed GTK1 compilation issues
